# luarmor-lib

./: CMakeLists.txt  README.md
docs/: API.md  BUILDING.md  QUICKSTART.md
include/: luarmor.h
src/: luarmor.c
src/utils/: http.c  json_parser.c  random.c  sha1.c
tests/: test_luarmor.c
